--- a/dashboard.html
+++ b/dashboard.html
@@ -6,10 +6,6 @@
     
     <title>Easly</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/dashboard.css">
@@ -36,35 +32,23 @@
         <section class="btns">
 
             <button class="btn-white">
-                <div>
-                    <span class="material-symbols-outlined">history</span>
-                </div>
+                <span class="icon">history</span>
                 Dernières transactions
-                <span class="material-symbols-outlined">arrow_forward_ios</span>
             </button>
 
-            <button class="btn-white">
-                <div>
-                    <span class="material-symbols-outlined">group</span>
-                </div>
+            <button class="btn-white" onclick="window.location.href='/accounts'">
+                <span class="icon">group</span>
                 Voir tous les comptes
-                <span class="material-symbols-outlined">arrow_forward_ios</span>
             </button>
 
             <button class="btn-white">
-                <div>
-                    <span class="material-symbols-outlined">shield_person</span>
-                </div>
+                <span class="icon">shield_person</span>
                 Gerer les administrateurs
-                <span class="material-symbols-outlined">arrow_forward_ios</span>
             </button>
 
             <button class="btn-white">
-                <div>
-                    <span class="material-symbols-outlined">edit</span>
-                </div>
+                <span class="icon">edit</span>
                 Modifier mon compte
-                <span class="material-symbols-outlined">arrow_forward_ios</span>
             </button>
 
         </section>
