Did some changes i guess

--- a/accounts.html
+++ b/accounts.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 
+    <!-- PAGE CONTENT -->
     <section class="content">
 
         <section class="top">
@@ -34,8 +35,12 @@
 
         </section>
 
-
     </section>
+
+    <!-- PLUS BUTTON -->
+    <div id="new_account">
+        <span class="material-symbols-outlined">add</span>
+    </div>
 
     <!-- SCRIPTS -->
     <script type="module" src="scripts/organisation.js"></script>
