--- a/dashboard.html
+++ b/dashboard.html
@@ -36,9 +36,9 @@
                 Dernières transactions
             </button>
 
-            <button class="btn-white" onclick="window.location.href='/accounts'">
-                <span class="icon">group</span>
-                Voir tous les comptes
+            <button class="btn-white" onclick="window.location.href='/cards'">
+                <span class="icon">account_balance</span>
+                Voir toutes les cartes
             </button>
 
             <button class="btn-white">
