--- a/card404.html
+++ b/card404.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="styles/general.css">
-    <link rel="stylesheet" href="styles/user404.css">
+    <link rel="stylesheet" href="styles/card404.css">
 
 </head>
 <body>
@@ -25,7 +25,7 @@
     </section>
 
     <!-- SCRIPTS -->
-    <script type="module" src="scripts/user404.js"></script>
+    <script type="module" src="scripts/card404.js"></script>
 
 </body>
 </html>
