--- a/cards.html
+++ b/cards.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="styles/general.css">
-    <link rel="stylesheet" href="styles/accounts.css">
+    <link rel="stylesheet" href="styles/cards.css">
 
 </head>
 <body>
@@ -29,7 +29,7 @@
 
             <!-- AUTO COMPLETED -->
             <button class="btn-white">
-                <span>HANNIER</span>
+                <span>05/20/2025</span>
                 Axelle
             </button>
 
@@ -38,13 +38,13 @@
     </section>
 
     <!-- PLUS BUTTON -->
-    <div id="new_account">
-        <span class="material-symbols-outlined">add</span>
-    </div>
+    <button id="new_card" class="btn-white no-arrow only-icon">
+        <span class="icon">add</span>
+    </button>
 
     <!-- SCRIPTS -->
     <script type="module" src="scripts/organisation.js"></script>
-    <script type="module" src="scripts/accounts.js"></script>
+    <script type="module" src="scripts/cards.js"></script>
 
 </body>
 </html>
