added organisation data fetching and some testing for mobile viewport

--- a/cards.html
+++ b/cards.html
@@ -17,8 +17,8 @@
     <section class="content">
 
         <section class="top">
-            <h1>Easly</h1>
-            <h2>Liste des comptes</h2>
+            <h2>Easly</h2>
+            <h1>Liste des comptes</h1>
         </section>
 
         <div class="search-container">
@@ -40,6 +40,11 @@
     <!-- PLUS BUTTON -->
     <button id="new_card" class="btn-white no-arrow only-icon">
         <span class="icon">add</span>
+    </button>
+
+    <!-- BACK BUTTON -->
+    <button onclick="history.back();" id="back" class="btn-white no-arrow only-icon">
+        <span class="icon">arrow_back</span>
     </button>
 
     <!-- SCRIPTS -->
