--- a/login.html
+++ b/login.html
@@ -15,8 +15,8 @@
     <section class="content">
 
         <section class="top">
-            <h1>Easly</h1>
-            <h2>Connection</h2>
+            <h2>CardPay</h2>
+            <h1>Connection</h1>
         </section>
     
         <section class="form">
