--- a/new_card.html
+++ b/new_card.html
@@ -17,8 +17,8 @@
     <section class="content">
 
         <section class="top">
-            <h1>Easly</h1>
-            <h2>Créer une carte</h2>
+            <h2>Easly</h2>
+            <h1>Créer une carte</h1>
         </section>
 
         <section class="actions showed">
@@ -66,6 +66,7 @@
     </button>
 
     <!-- SCRIPTS -->
+    <script type="module" src="scripts/organisation.js"></script>
     <script type="module" src="scripts/new_card.js"></script>
 
 </body>
