Finish em to rem change & added copy

--- a/new_card.html
+++ b/new_card.html
@@ -68,7 +68,7 @@
 
             <div class="url">
                 <p id="nonfc_url">https://adiilpay.com/cards?id=1868607292297505154</p>
-                <button class="btn-red only-icon">
+                <button class="btn-red only-icon" id="copy_url">
                     <span class="icon">content_copy</span>
                 </button>
             </div>
@@ -125,7 +125,6 @@
     <!-- SCRIPTS -->
     <script type="module" src="scripts/organisation.js"></script>
     <script type="module" src="scripts/new_card.js"></script>
-    <script type="module" src="scripts/modals.js"></script>
 
 </body>
 </html>
