--- a/card.html
+++ b/card.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Easly</title>
+    <title>Pay</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="styles/general.css">
@@ -17,7 +17,7 @@
     <section class="content">
 
         <section class="top">
-            <h2>Easly</h2>
+            <h2>Pay</h2>
             <h1>Carte utilisateur</h1>
         </section>
 
