started card viewing for user

--- a/new_card.html
+++ b/new_card.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="styles/general.css">
-    <link rel="stylesheet" href="styles/card.css">
+    <link rel="stylesheet" href="styles/menu.css">
     <link rel="stylesheet" href="styles/card_div.css">
     <link rel="stylesheet" href="styles/new_card.css">
     <link rel="stylesheet" href="styles/modals.css">
