fix api call for credit

--- a/new_card.html
+++ b/new_card.html
@@ -23,7 +23,7 @@
             <h1>Créer une carte</h1>
         </section>
 
-        <section class="actions" id="creation_modal">
+        <section class="actions">
 
             <div class="card">
   
